<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start"
        android:elevation="6dp"
        android:scaleType="centerCrop"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/share"
            android:focusable="true"
            android:visibility="visible"
            app:borderWidth="2dp"
            app:iconTint="#2196F3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_adplaceholder"
            app:srcCompat="@drawable/ic_share" />

        <FrameLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/sdsd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/asset"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almendra"
                android:text="@string/a_basic_video_editor"
                android:textAlignment="center"
                android:textColor="@color/black_translucent"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/iv_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/artist_name"
            android:focusable="true"
            android:onClick="godevloperDetails"
            android:src="@drawable/ic_dev"
            android:visibility="visible"
            app:borderWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_adplaceholder" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/start"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:drawableStart="@drawable/ic_go"
            android:focusable="true"
            android:fontFamily="@font/archivo_black"
            android:padding="10dp"
            android:text="@string/get_start"
            android:textSize="16sp"
            android:visibility="visible"
            app:icon="@drawable/ic_go"
            app:iconPadding="30dp"
            app:iconTint="#2979FF"
            app:iconTintMode="src_atop"
            app:layout_constraintBottom_toTopOf="@+id/iv_privecy"
            app:layout_constraintEnd_toStartOf="@+id/iv_reta"
            app:layout_constraintStart_toEndOf="@+id/iv_share"
            app:layout_constraintTop_toBottomOf="@+id/iv_dev"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/iv_privecy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:borderWidth="2dp"
            app:layout_constraintBottom_toTopOf="@+id/sdsd"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_privacy" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/iv_reta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            app:borderWidth="2dp"
            app:layout_constraintBottom_toTopOf="@+id/sdsd"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_start" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>